# FlowGraph

./: .gitignore  CMakeLists.txt  CONTRIBUTING.cn.md  CONTRIBUTING.md  DEV_PHASE_1.cn.md  DEV_PHASE_1.md  DEV_PHASE_2.md  FileFormat.md  LICENSE  Package.swift  README.cn.md  README.md  imgui.ini
.github/workflows/: ci.yml
Core/include/flowgraph/: FlowGraph.hpp
Core/include/flowgraph/detail/: AST.hpp  Engine.hpp  Parser.hpp  Types.hpp
Sources/CFlowGraph/include/: CFlowGraph.h
Sources/FlowGraph/: FlowGraph.swift
Swift/CFlowGraph/: CFlowGraph.cpp
Swift/CFlowGraph/include/: module.modulemap
Swift/FlowGraph/: FlowGraph.swift
Tests/FlowGraphTests/: FlowGraphTests.swift
cmake/: FlowGraphConfig.cmake.in  package.cmake  package_README.md.in
docs/: ASYNC_PROC_GUIDE.md
editor/: CMakeLists.txt  Info.plist  imconfig.h
editor/src/: EditorApp.cpp  EditorApp.hpp  EditorApp.mm  EditorAppLinux.cpp  EditorAppMacOS.mm  EditorAppWindows.cpp  EditorAppWindows_old.cpp  main.cpp
editor/tests/: simple_ui_test.cpp  test_editor_ui.cpp  test_main.cpp
examples/: CMakeLists.txt  independent_compile_test.cpp  layout_demo.cpp
examples/basic/: CMakeLists.txt  async_proc_demo.cpp  flow_expression_demo.cpp  hello.flow  hello_example.cpp
examples/integration/: README.md
examples/integration/fetchcontent/: CMakeLists.txt  README.md  main.cpp
examples/integration/findpackage/: CMakeLists.txt  README.md  main.cpp
examples/integration/standalone/: README.md  main.cpp  standalone_example
include/flowgraph/: FlowGraph.hpp
include/flowgraph/detail/: Engine.hpp  Parser.hpp
include/flowgraph_layout/: ForceDirectedLayout.hpp  GridLayout.hpp  HierarchicalLayout.hpp  Layout.hpp  LayoutTypes.hpp
tests/: CMakeLists.txt  test_main.cpp
tests/integration/: test_basic_flows.cpp  test_examples.cpp
tests/unit/: test_ast.cpp  test_async_proc.cpp  test_editor_integration.cpp  test_engine.cpp  test_expression_integration.cpp  test_layout.cpp  test_parser.cpp  test_types.cpp
